Source/WebCore/PAL/pal/crypto/gcrypt/Utilities.h
@@ -43,8 +43,13 @@ using CipherOperation = gcry_error_t(gcry_cipher_hd_t, void*, size_t, const void
 
 static inline void logError(gcry_error_t error)
 {
+    // FIXME: Use a WebCrypto WTF log channel here once those are moved down to PAL.
+#if !LOG_DISABLED
     WTFLogAlways("libgcrypt error: source '%s', description '%s'",
         gcry_strsource(error), gcry_strerror(error));
+#else
+    UNUSED_PARAM(error);
+#endif
 }
 
 static inline std::optional<int> aesAlgorithmForKeySize(size_t keySize)
